Fix a bug where the box size of the back to dashboard link was waaay too big in FF
--HG--
extra : convert_revision : svn%3A60972f9f-2242-074b-9109-3933092f38a4/trunk%40727

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -708,10 +708,8 @@ ul.ui-autocomplete .ui-menu-item a span.playlist {
     color: #333;
     display: block;
     font-size: 10px;
-    height: 100%;
     padding: 52px 0 0 1px;
     text-decoration: none;
-    width: 100%;
 }
 #back-to-dashboard.single-exercise a#dashboard-breadcrumb:hover {
     background-image: url(/images/dashboard-icon-active.png);
